--- a/Second-Nature/vue/package.json
+++ b/Second-Nature/vue/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.4",
     "vue": "^3.3.4",
     "vue-pdf": "^4.3.0",
+    "vue-pdf-embed": "^2.1.0",
     "vue-router": "^4.2.1",
     "vuex": "^4.1.0"
   },
