--- a/Second-Nature/java/src/main/resources/application.properties
+++ b/Second-Nature/java/src/main/resources/application.properties
@@ -14,5 +14,5 @@ jwt.route.authentication.path=/login
 jwt.route.authentication.refresh=/refresh
 
 server.error.include-stacktrace=never
-
+spring.jackson.time-zone=EST
 server.port=9000
