--- a/Second-Nature/vue/package.json
+++ b/Second-Nature/vue/package.json
@@ -7,22 +7,25 @@
     "build": "vite build",
     "preview": "vite preview",
     "prepreview": "npm run build",
+    "test": "vitest",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore src"
-
   },
   "dependencies": {
-    "axios": "^0.21.4",
+    "@vue/test-utils": "^2.4.6",
+    "axios": "^1.7.7",
     "vue": "^3.3.4",
-    "vuex": "^4.1.0",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "vite": "^3.2.7",
     "eslint": "^8.42.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^7.20.0",
+    "jsdom": "^25.0.1",
+    "vite": "^3.2.11",
+    "vitest": "^2.1.4",
     "vue-eslint-parser": "^9.3.0"
   }
 }
