--- a/Second-Nature/vue/package.json
+++ b/Second-Nature/vue/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.1",
     "vuex": "^4.1.0"
